tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern9.sk
fun matcher(value: Int): Int {
  value match {
  | 42 -> 42
  | 3 -> 101
  // non-exhaustive pattern
  }
}
